# aquaspectra-maize-hsi

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  config.test.yaml  config.yaml  pyproject.toml  requirements.txt  run.ps1  setup.ps1
.streamlit/: config.toml
data/: plots.geojson  wavelengths.csv
src/aquaspectra/: __init__.py  bands.py  cli.py  config.py  features.py  indices.py  models.py  ndvi.py  pipeline.py  predict.py  report.py  sampling.py
tests/: test_pipeline.py
tools/: make_synthetic_data.py
